# SPDX-FileCopyrightText: 2026 Robert Pelfrey <robert@pelfrey.de>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "yafvs-api"
version = "0.1.0-alpha.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
axum = "0.7"
base64 = "0.22"
deadpool-postgres = "0.14"
libc = "0.2"
pdf-writer = "0.15.0"
quick-xml = "0.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ssh-key = { version = "=0.7.0-rc.11", default-features = false, features = ["ed25519", "encryption", "getrandom", "std"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-postgres = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde"] }
yafvs-domain = { path = "../../crates/yafvs-domain" }
zeroize = "1"
