# SPDX-FileCopyrightText: 2026 Robert Pelfrey <Robert@Pelfrey.de>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "yafvsctl"
version = "0.1.0-alpha.0"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
glob = "0.3"
libc = "0.2"
quick-xml = "0.41"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shlex = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.9"
